--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -1229,7 +1229,7 @@ tech_reverse_advanced_dome: " "
 # ------------------------------------------------------------
  situation_tec_replicant_path_t2:0 "Synthesis"
  situation_tec_replicant_path_t2_type:0 "$situation_tec_replicant_path_t2$"
- situation_tec_replicant_path_t2_desc:0 "Using our knowledge of cybernetics, nanorobotics and genetic manipulation, we can provide our kind with a revolutionary new technology that can smash the walls between synthetic and biological worlds and unite them under a unique, perfect and hyper-capable way."
+ situation_tec_replicant_path_t2_desc:0 "Using our knowledge of cybernetics, nanorrobotic and genetic manipulation, we can provide our kind with a revolutionary new technology that can smash the walls between synthetic and biological worlds and unite them under a unique, perfect and hyper-capable way."
  situation_tec_replicant_path_t2_fail_tooltip:0 "It is impossible for us to fail."
  situation_tec_replicant_path_t2_end_tooltip:0 "If we complete this study, we will be able to achieve our goals and unite the potential of cybernetic and biological technologies."
  situation_tec_replicant_path_t2_monthly_change_tooltip:0 "The progress of this §YSituation§! depend on our approach and potential side-events appearing during the situation."
@@ -1244,16 +1244,17 @@ tech_reverse_advanced_dome: " "
  situation_approach_tec_replicant_path_t2_notech:0 "Lacking Technology"
  situation_approach_tec_replicant_path_t2_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £physics£ §Y$tech_neuro_quantum_links$§! and £society£ §Y$tech_gene_tailoring$§! technologies to continue."
 
- situation_approach_tec_replicant_path_t2_slow:0 "Cautious Implementation"
- situation_approach_tec_replicant_path_t2_slow_tooltip:0 "TO DO"
- situation_approach_tec_replicant_path_t2_neutral:0 "Standard Protocol"
- situation_approach_tec_replicant_path_t2_neutral_tooltip:0 "TO DO"
- situation_approach_tec_replicant_path_t2_fast:0 "Accelerated Implementation"
- situation_approach_tec_replicant_path_t2_fast_tooltip:0 "TO DO"
+ situation_approach_tec_replicant_path_t2_slow:0 "Procedural Augmentation"
+ situation_approach_tec_replicant_path_t2_slow_tooltip:0 "" # TO DO
+ situation_approach_tec_replicant_path_t2_neutral:0 "Standard Augmentation"
+ situation_approach_tec_replicant_path_t2_neutral_tooltip:0 "TO DO" # TO DO
+ situation_approach_tec_replicant_path_t2_fast:0 "Accelerated Augmentation"
+ situation_approach_tec_replicant_path_t2_fast_tooltip:0 "" # TO DO
 
  situation_string_tec_replicant_path_t2_neutral:0 "$situation_approach_tec_replicant_path_t2_neutral$"
  situation_string_tec_replicant_path_t2_slow:0 "$situation_approach_tec_replicant_path_t2_slow$"
  situation_string_tec_replicant_path_t2_fast:0 "$situation_approach_tec_replicant_path_t2_fast$"
+ situation_string_tec_replicant_path_t2_slow_progress:0 "Synthesis Distribution"
 
 # Biopsionic T2 situation
 # ------------------------------------------------------------
@@ -1273,13 +1274,13 @@ tech_reverse_advanced_dome: " "
  situation_approach_tec_biopsionic_path_t2_notech:0 "Lacking Technology"
  situation_approach_tec_biopsionic_path_t2_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £society£ §Y$tech_gene_tailoring$§! and £society£ §Y$tech_psionic_theory$§! technologies to continue."
  situation_approach_tec_biopsionic_path_t2_psionics:0 "Mind Focus"
- situation_approach_tec_biopsionic_path_t2_psionics_tooltip:0 "TO DO"
+ situation_approach_tec_biopsionic_path_t2_psionics_tooltip:0 "" # TO DO
  situation_approach_tec_biopsionic_path_t2_neutral:0 "Stoic Discovery"
- situation_approach_tec_biopsionic_path_t2_neutral_tooltip:0 "TO DO"
+ situation_approach_tec_biopsionic_path_t2_neutral_tooltip:0 "" # TO DO
  situation_approach_tec_biopsionic_path_t2_genetics:0 "Form Focus"
- situation_approach_tec_biopsionic_path_t2_genetics_tooltip:0 "TO DO"
+ situation_approach_tec_biopsionic_path_t2_genetics_tooltip:0 "" # TO DO
  situation_approach_tec_biopsionic_path_t2_nozro:0 "Zro Studies"
- situation_approach_tec_biopsionic_path_t2_nozro_tooltip:0 "TO DO"
+ situation_approach_tec_biopsionic_path_t2_nozro_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research the £society£ §Y$tech_mine_zro$§! technology to continue."
 
  situation_string_tec_biopsionic_path_t2_neutral:0 "$situation_approach_tec_biopsionic_path_t2_neutral$"
  situation_string_tec_biopsionic_path_t2_psionics:0 "$situation_approach_tec_biopsionic_path_t2_psionics$"
@@ -1314,7 +1315,7 @@ tech_reverse_advanced_dome: " "
 # ------------------------------------------------------------
  situation_tec_cyberpsionic_path_t2:0 "Soul and Iron"
  situation_tec_cyberpsionic_path_t2_type:0 "$situation_tec_cyberpsionic_path_t2$"
- situation_tec_cyberpsionic_path_t2_desc:0 "TO DO"
+ situation_tec_cyberpsionic_path_t2_desc:0 "We are on the verge of a radical change for our species, kind and empire as a whole; a whole frontier is being opened, our psionic powers are growing and our knowledge of cybernetics will serve as the path to channel, use and improve ourselves, making a perfect combination of our mind and our technology."
  situation_tec_cyberpsionic_path_t2_fail_tooltip:0 "It is impossible for us to fail."
  situation_tec_cyberpsionic_path_t2_end_tooltip:0 "If we complete this study, we will be able to achieve our goals and imbue our technology with our psionic capacities."
  situation_tec_cyberpsionic_path_t2_monthly_change_tooltip:0 "The progress of this §YSituation§! depend on our approach and potential side-events appearing during the situation."
@@ -1329,14 +1330,14 @@ tech_reverse_advanced_dome: " "
  situation_approach_tec_cyberpsionic_path_t2_notech:0 "Lacking Technology"
  situation_approach_tec_cyberpsionic_path_t2_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £physics£ §Y$tech_neuro_quantum_links$§! and £society£ §Y$tech_psionic_theory$§! technologies to continue."
 
- situation_approach_tec_cyberpsionic_path_t2_slow:0 "Cautious Implementation"
- situation_approach_tec_cyberpsionic_path_t2_slow_tooltip:0 "TO DO"
- situation_approach_tec_cyberpsionic_path_t2_neutral:0 "Standard Protocol"
- situation_approach_tec_cyberpsionic_path_t2_neutral_tooltip:0 "TO DO"
- situation_approach_tec_cyberpsionic_path_t2_fast:0 "Accelerated Implementation"
- situation_approach_tec_cyberpsionic_path_t2_fast_tooltip:0 "TO DO"
+ situation_approach_tec_cyberpsionic_path_t2_slow:0 "Stable Blueprints"
+ situation_approach_tec_cyberpsionic_path_t2_slow_tooltip:0 "" # TO DO
+ situation_approach_tec_cyberpsionic_path_t2_neutral:0 "Initial Concepts"
+ situation_approach_tec_cyberpsionic_path_t2_neutral_tooltip:0 "" # TO DO
+ situation_approach_tec_cyberpsionic_path_t2_fast:0 "Accelerated Blueprints"
+ situation_approach_tec_cyberpsionic_path_t2_fast_tooltip:0 "" # TO DO
  situation_approach_tec_cyberpsionic_path_t2_nozro:0 "Infusion Research"
- situation_approach_tec_cyberpsionic_path_t2_nozro_tooltip:0 "TO DO"
+ situation_approach_tec_cyberpsionic_path_t2_nozro_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research the £society£ §Y$tech_mine_zro$§! technology to continue."
 
  situation_string_tec_cyberpsionic_path_t2_base:0 "$situation_approach_tec_cyberpsionic_path_t2_neutral$"
  situation_string_tec_cyberpsionic_path_t2_slow:0 "$situation_approach_tec_cyberpsionic_path_t2_slow$"
@@ -2431,7 +2432,7 @@ tech_reverse_advanced_dome: " "
 # Bio-Cyb: Replicant
 # ------------------------------------------------------------ namespace = tec_replicant_path
  tec_replicant_path.300.name:0 "Replicant Evolution"
- tec_replicant_path.300.desc:0 "Our expertise in cybernetics and genetics came to this point today, we have created a compound that will enhance our bodies to a point of not being totally organic, nor totally synthetic, but both; we have called it Replicant 01.\nWith radical changes done at a cellular level, we will be better than before and impervious to damage or illness, and we will keep our will and capacities as organics, while also we will provide any synths with it, and they will benefit from this discovery too.\n\nIts up to us to continue with the research and make this discovery available for every citizen of [GetName], but it will be worth the enormous cost and inversion, as all will be improved and better."
+ tec_replicant_path.300.desc:0 "Our expertise in cybernetics and genetics came to this point today, we have theorized the possibility of the creation of a compound that will enhance our bodies to a point of not being totally organic, nor totally synthetic, but both; we have called that experiment as Replicant 01.\nWith it, radical changes done at a cellular level will make us better, faster, stronger than before, impervious to damage or illness while keeping our will and capacities as organics.\n\nIts up to us to continue with the research and make this discovery available for every citizen of [GetName], but it will be worth the enormous effort."
  tec_replicant_path.300.desc.genetics:0 "TO DO"
  tec_replicant_path.300.desc.cybernetics:0 "TO DO"
  tec_replicant_path.300.desc.replicant:0 "TO DO"
@@ -2443,11 +2444,11 @@ tech_reverse_advanced_dome: " "
 # --------------- Situation
 # 10%
  tec_replicant_path.30010.name:0 "Theory of Synthesis"
- tec_replicant_path.30010.desc:0 "TO DO"
+ tec_replicant_path.30010.desc:0 "Life changes constantly; its mutable, its adaptable, is malleable... such unpredictable model can be reformed with our estimated models, creating specifically created nanorrobots, initially guided with existing cybernetic implants and later totally blended with them, which will ''reform'' tissue into biosynthetic material.\nWe need to conduct several tests to find the adequate key, the better approach, to ensure the development is stable and streamlined."
  tec_replicant_path.30010.a:0 "Proceed nominally"
- tec_replicant_path.30010.a.tooltip:0 "We will change our approach towards a §Y$situation_approach_tec_replicant_path_t2_slow$§! of our available genetic repository.\nThis make the conducted tests slower, but less costly and, overall, §GSafer§!"
+ tec_replicant_path.30010.a.tooltip:0 "We will change our approach towards a §Y$situation_approach_tec_replicant_path_t2_slow$§! of our very selves.\nThis make the conducted tests slower, but less costly and, overall, §GSafer§!"
  tec_replicant_path.30010.b:0 "Time is on the essence"
- tec_replicant_path.30010.b.tooltip:0 "We will change our approach towards a §Y$situation_approach_tec_replicant_path_t2_fast$§! of our available genetic repository.\nThis make the conducted tests faster, but more costly and, overall, §RUnpredictable§!"
+ tec_replicant_path.30010.b.tooltip:0 "We will change our approach towards a §Y$situation_approach_tec_replicant_path_t2_fast$§! of our very selves.\nThis make the conducted tests faster, but more costly and, overall, §RUnpredictable§!"
 
 # 20% - indicate combined replicants
  tec_replicant_path.30020.name:0 "Recombined Integration"
@@ -2456,15 +2457,15 @@ tech_reverse_advanced_dome: " "
  tec_replicant_path.30020.a.tooltip:0 "We have unlocked a way to ''Combine'' certain aspects of our genetics and cybernetic upgrades in order to create a fast-produced but relatively unstable replicant variant."
 
 # 40% - indicated upgraded replicants
- tec_replicant_path.30040.name:0 "Developed Upgrades"
- tec_replicant_path.30040.desc:0 "TO DO"
- tec_replicant_path.30040.a:0 "Continue the investigation"
+ tec_replicant_path.30040.name:0 "Artificial Upgrade"
+ tec_replicant_path.30040.desc:0 "A second promising batch of changes resulted in an interesting anomaly; while the last result allowed a overdrive of the combination and re-combination of both applications, this new one created a ... different result.\nThe outcome is a completely different tissue, not totally synthetic and artificial, not totally organic, yet both; its a next step in evolution rather than an improvement on the current state, a...''Upgrade'' - yet a risky one.\nHowever, this led to the affected tissue being unable to reproduce naturally, only with the assistance of other artificial reforming cells, which can be an acceptable handicap should be continue down this line."
+ tec_replicant_path.30040.a:0 "Continue this investigation"
  tec_replicant_path.30040.a.tooltip:0 "We have unlocked a way to ''Upgrade'' our biomechanical technologies to create a more optimized, but artificial, replicant variant."
 
 # 50% - Decide
  tec_replicant_path.30050.name:0 "Bio-Synthetic Inflection"
  tec_replicant_path.30050.desc:0 "After the initial prototypes, then time has come for further trials and proofs of the synthesis system works. There are still several risks and necessary changes in both design and effects, but we are close to complete our goal."
- tec_replicant_path.30050.desc.revisited:0 "TO DO"
+ tec_replicant_path.30050.desc.revisited:0 "After the initial prototypes, we need to decide how to properly execute the synthesis. There are still several risks and necessary changes in both design and effects, but we are close to complete our goal."
  tec_replicant_path.30050.a.standard:0 "Keep the current research"
  tec_replicant_path.30050.a.standard.tooltip:0 "We won't risk any potential deviation of our current synthesis plans, creating a §YStandard Replicant§! template.\nStandard replicants have 80% habitability floor, immortal leaders and standard capacities."
  tec_replicant_path.30050.a.combined:0 "Exploit the discovered recombination"
@@ -2473,10 +2474,10 @@ tech_reverse_advanced_dome: " "
  tec_replicant_path.30050.a.upgraded.tooltip:0 "We will shift our efforts toward creating a suitable §YUpgraded Replicant§! template.\nUpgraded replicants have 100% habitability floor, Immortal leaders and amplified effects on replicant traits, but can't grow pops naturally, only via assembly."
 	# confirm
  tec_replicant_path.30051.name:0 "Bio-Synthetic Inflection"
- tec_replicant_path.30051.desc:0 "TO DO"
- tec_replicant_path.30051.desc.base:0 "TO DO"
- tec_replicant_path.30051.desc.combined:0 "TO DO"
- tec_replicant_path.30051.desc.upgraded:0 "TO DO"
+ tec_replicant_path.30051.desc:0 "So, we are at the edge of this procedure. Tests and experiments have been done and paths have been discarded."
+ tec_replicant_path.30051.desc.base:0 "$tec_replicant_path.30051.desc$\nWe will minimize all the potential risks and go for a stable route, a §YStandard§! route, which will ensure our future and the safest way of changing our species into a immortal bio-synthetic one."
+ tec_replicant_path.30051.desc.combined:0 "$tec_replicant_path.30051.desc$\nWe will exploit a risky discovery, making for an unstable yet beneficial route, a §YCombined§! route, which will ensure our future and a way unleashing the potential of our species as more organic and mortal bio-synthetics."
+ tec_replicant_path.30051.desc.upgraded:0 "$tec_replicant_path.30051.desc$\nWe will adopt an alternative path, making for an experimental design route, an §YUpgraded§! route, which will radically change our very foundation towards a more bio-synthetic, optimized and immortal future, even if we have to sacrifice some natural capacities on the way."
  tec_replicant_path.30051.a.standard:0 "Proceed"
  tec_replicant_path.30051.a.standard.tooltip:0 "The §YStandard Replicant§! template will be applied. Standard replicants have 80% habitability floor, immortal leaders and standard capacities.\n§RThis decision cannot be undone!§!"
  tec_replicant_path.30051.a.combined:0 "Proceed"
@@ -2488,11 +2489,12 @@ tech_reverse_advanced_dome: " "
 
 # 75% - Results
  tec_replicant_path.30075.name:0 "Like Tears In The Rain"
- tec_replicant_path.30075.desc.base:0 "TO DO"
- tec_replicant_path.30075.desc.combined:0 "TO DO"
- tec_replicant_path.30075.desc.upgraded:0 "TO DO"
- tec_replicant_path.30075.a:0 "TO DO"
- tec_replicant_path.30075.a.tooltip:0 "TO DO"
+ tec_replicant_path.30075.desc:0 "After the process is finished, we will declare loud our next step in evolution; what we were, what we are, will be no more, washed away down the evolutionary path, like tears in the rain, and from those waters of the past,we will reemerge anew."
+ tec_replicant_path.30075.desc.base:0 "We are ready to distribute the compound on our population; the change will be slow, but we have guaranteed a safe implementation, improving our kind without sacrificing our organic identity.\n$tec_replicant_path.30075.desc$"
+ tec_replicant_path.30075.desc.combined:0 "We are ready to distribute the compound on our population; the change will be slow, and we must be careful as this change is more radical and unstable, yet we will take all the measures possible to ensure the improvement of our population reinforcing our organic identity.\n$tec_replicant_path.30075.desc$"
+ tec_replicant_path.30075.desc.upgraded:0 "We are ready to distribute the compound on our population; the change will be slow, and adapting to it will be complicated, as its a direct existential upgrade, making us closer to synthetics yet maintaining what we are as organics, even if we sacrifice some aspects of it.\n$tec_replicant_path.30075.desc$"
+ tec_replicant_path.30075.a:0 "Prepare the distribution"
+ tec_replicant_path.30075.a.tooltip:0 "We will start preparing the distribution of the compound amongst the population, for a slow and steady change, mitigating issues on the way.\nSituation progress will be slowed."
 
  # Note - per origin thing is discarded
 #/
