--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -1070,35 +1070,10 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  trait_tec_biopsionic_secondary_module_amenities:0 "$mod_pop_amenities_usage_mult$: §G-15%§!\n"
 
  trait_tec_biopsionic_leader_module_fallback:0 "\n§GImmortal§!"
-# 
- #mod_trait_tec_cybernetic_tooltip:0 "[trait_tec_cybernetic_module_block_1][trait_tec_cybernetic_module_block_2][trait_tec_cybernetic_submodule_block_1][trait_tec_cybernetic_submodule_block_2][trait_tec_cybernetic_leader_block]"
-
- # tec_blank
- #trait_tec_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
- #trait_tec_cybernetic_module_versatility:0 "$mod_planet_jobs_produces_mult$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
- #trait_tec_cybernetic_module_research:0 "$mod_planet_researchers_all_research_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
- #trait_tec_cybernetic_module_industrial:0 "$mod_planet_industrial_jobs_all_industrial_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
-
- #trait_tec_cybernetic_submodule_fallback:0 "$MOD_LEADER_AGE$: §G+25 years§!\n"
- #trait_tec_cybernetic_submodule_lifespan:0 "$trait_tec_cybernetic_submodule_fallback$"
- #trait_tec_cybernetic_submodule_warfare:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
- #trait_tec_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
- #trait_tec_cybernetic_submodule_recycling:0 "$mod_planet_pops_upkeep_mult$: §G-10%§!\n"
- #trait_tec_cybernetic_submodule_construction:0 "$MOD_PLANET_BUILDING_BUILD_SPEED_MULT$ per Pop: §G+1%§!\n"
- #trait_tec_cybernetic_submodule_knowledge:0 "$MOD_LEADER_SPECIES_EXP_GAIN$: §G+25%§!\n"
-
- #trait_tec_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
- #trait_tec_cybernetic_leader_versatility:0 "$trait_tec_cybernetic_leader_fallback$"
- #trait_tec_cybernetic_leader_research:0 "§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
- #trait_tec_cybernetic_leader_industrial:0 "§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
- #trait_tec_cybernetic_leader_versatility_industrial:0 "§GLeaders from this species have additional traits and bonuses§!"
- #trait_tec_cybernetic_leader_versatility_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
- #trait_tec_cybernetic_leader_industrial_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
-# /
 
  trait_tec_biopsionic_embroidered:0 "Embroidered Minds"
  trait_tec_biopsionic_embroidered_desc:0 "§LA kind of strong biopsionic link unites all the members of this species, far beyond what any kind of naturally biological, psionically gifted or artificially engineered creates, sharing knowledge, experiences and feelings.§!"
- trait_tec_biopsionic_embroidered_EFFECT:0 "£unity£ Unity from jobs: §G+10%§!\nEach pop will increase the output of any other pop with this trait present in the planet by §G+0.25%§!.§!"
+ trait_tec_biopsionic_embroidered_EFFECT:0 "£unity£ Unity from jobs: §G+10%§!\nEach pop will increase the output of any other psionic pop present in the planet by §G+0.25%§!"
 
  trait_tec_biopsionic_brain:0 "Knowledge Transference"
  trait_tec_biopsionic_brain_desc:0 "§LUsing potent neurotransmissors paired with the increased psionic activity on this species members, they can transfer unfathomable amounts of thoughts in a moment, specially when both parts are in highly enriching environments.§!"
@@ -1124,20 +1099,20 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
  trait_tec_biopsionic_A_EFFECT:0 "A"
 
  trait_tec_biopsionic_seed:0 "Biopsionic Seed"
- trait_tec_biopsionic_seed_desc:0 ""
- trait_tec_biopsionic_seed_effect:0 "This organic species is considered §MPsionic§! and benefits from §HPsionic bonuses§! and modifiers, but has no psionic capacities. Also counts as §HEmbroidered Minded§! pops."
+ trait_tec_biopsionic_seed_desc:0 "§LAn implanted genetic repository imbued with perfect essence, this special element amplifies the characteristics of psionically inert species, to the level of psionically capable ones.§!"
+ trait_tec_biopsionic_seed_effect:0 "This organic species is considered §MPsionic§! and benefits from §HPsionic bonuses§! and modifiers, but has no psionic capacities\nThis species is priorized for §HRituals of Convergence§!\nEach pop will increase the output of any other psionic pop present in the planet by §G+0.25%§!"
 
- trait_tec_biopsionic_germination:0 "Essence Germination"
- trait_tec_biopsionic_germination_desc:0 ""
- trait_tec_biopsionic_germination_effect:0 ""
+ trait_tec_biopsionic_converged_body:0 "Converged Physique"
+ trait_tec_biopsionic_converged_body_desc:0 "§LA perfect body result of the deep and minucious application of biological and psionic convergence techniques.§!"
+ trait_tec_biopsionic_converged_body_effect:0 "£energy£ Energy from Technicians: §G+1§!\n£minerals£ Minerals from Miners: §G+1§!\n£food£ Food from Farmers: §G+1§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
 
- trait_tec_biopsionic_shaped_menial:0 "Shaped Capacities"
- trait_tec_biopsionic_shaped_menial_desc:0 ""
- trait_tec_biopsionic_shaped_menial_effect:0 ""
+ trait_tec_biopsionic_converged_skills:0 "Converged Dexterity"
+ trait_tec_biopsionic_converged_skills_desc:0 "§LA perfect set of skills result of the deep and minucious application of biological and psionic convergence techniques.§!"
+ trait_tec_biopsionic_converged_skills_effect:0 "£alloys£ Alloys from Metallurgists: §G+0.5§!\n£consumer_goods£ Consumer Goods from Artisans: §G+0.5§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
 
- trait_tec_biopsionic_shaped_production:0 "Shaped Dexterity"
- trait_tec_biopsionic_shaped_production_desc:0 ""
- trait_tec_biopsionic_shaped_production_effect:0 ""
+ trait_tec_biopsionic_converged_mind:0 "Converged Sapience"
+ trait_tec_biopsionic_converged_mind_desc:0 "§LControlled and amplified thoughts result of the deep and minucious application of biological and psionic convergence techniques.§!"
+ trait_tec_biopsionic_converged_mind_effect:0 "£trigger_tec_research£ Research from Researchers: §G+0.5§!\n£unity£ Unity from Administrators: §G+0.5§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
 
 # --------------- CYBERPSIONIC ASCENSION TRAITS ----------------------
 # T3
@@ -1190,7 +1165,7 @@ TRAIT_TEC_ROBOT_LIQUID_EFFECT:0 "$mod_planet_jobs_produces_mult$: §G+10%§!\nAr
 
  trait_tec_cyberpsionic_robot_telepsi:0 "Imbound Robokinesis"
  trait_tec_cyberpsionic_robot_telepsi_desc:0 "§LConnected to other cybernetic organisms, these mechanical units use psionic waves emanated by them to increase their computing capacities, or be directly commanded by them.§!"
- trait_tec_cyberpsionic_ROBOT_TELEPSI_EFFECT:0 "If a £building£ Dimensional Extractor is present on the planet:\nResources from £job£ Jobs: §G+5%§!\nRobot Empire Sprawl contribution: §G-20%§!\n\nRobot £sr_zro£ Zro Upkeep: §R+0.05§!"
+ trait_tec_cyberpsionic_ROBOT_TELEPSI_EFFECT:0 "If a £building£ $building_tec_cyberpsionic_extractor$ is present on the planet:\nResources from £job£ Jobs: §G+10%§!\nRobot Empire Sprawl contribution: §G-20%§!\n\nRobot £sr_zro£ Zro Upkeep: §R+0.05§!"
 
  trait_tec_cyberpsionic_a:0 "A"
  trait_tec_cyberpsionic_a_desc:0 "§LA§!"
