--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2069,7 +2069,7 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  mod_tec_entropy:0 "£sr_dark_matter£ Entropy"
  mod_tec_entropy_desc:0 "Entropy is a relative measure of anomalous matter relocated from other dimensions to our own, unstabilizing the local flow of time and space due to the exotic chaotic physics involved"
 
-# Extractor
+# OLD Extractor
  building_tec_cyberpsionic_extractor_1:0 "Dimensional Extractor"
  building_tec_cyberpsionic_extractor_1_plural:0 "Dimensional Extractors"
  building_tec_cyberpsionic_extractor_1_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
@@ -2085,16 +2085,35 @@ job_tec_master_roboticist_effect_t3_desc: "\nAfter the upgrade, £job_tec_roboti
  BUILDING_TEC_CYBERPSIONIC_DANGER_3:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Gincreased§!, but the §Rrisk§! of dimensional incursions is §Rgrowing§!."
  BUILDING_TEC_CYBERPSIONIC_DANGER_4:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, but the §Rrisk§! of dimensional incursions is §Renormous§!."
  BUILDING_TEC_CYBERPSIONIC_DANGER_5:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, and so the §Rrisk of attack§! of psionic entities against our empire."
+#/
 
-# Transmutter
- building_tec_cyberpsionic_transmutter:0 "Phase Transmutter"
- building_tec_cyberpsionic_transmutter_plural:0 "Phase Transmutters"
- building_tec_cyberpsionic_transmutter_desc:0 "Advanced installations that refine Zro particles into energy by applying physic principles to anomalous crossdimensional matter"
+# New extractor
+ building_tec_cyberpsionic_extractor:0 "Phase Extractor"
+ building_tec_cyberpsionic_extractor_plural:0 "Dimensional Extractors"
+ building_tec_cyberpsionic_extractor_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
+
+ building_tec_cyberpsionic_extractor_entropy:0 "The current rate of Entropy is: §R[tec_entropy_display]%§!"
+ building_tec_cyberpsionic_extractor_danger_0:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §BNon existant§!"
+ building_tec_cyberpsionic_extractor_danger_1:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §GLow§!"
+ building_tec_cyberpsionic_extractor_danger_2:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §YModerate§!"
+ building_tec_cyberpsionic_extractor_danger_3:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §HModerate§!"
+ building_tec_cyberpsionic_extractor_danger_4:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §PHigh§!"
+ building_tec_cyberpsionic_extractor_danger_5:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §RVery High§!"
+
+# Transmuter
+ building_tec_cyberpsionic_transmuter:0 "Phase Transmuter"
+ building_tec_cyberpsionic_transmuter_plural:0 "Phase Transmuters"
+ building_tec_cyberpsionic_transmuter_desc:0 "Advanced installations that refine Zro particles into energy by applying physic principles to anomalous crossdimensional matter"
+
+ building_tec_cyberpsionic_transmuter_designation:0 "This £building£ §YBuilding§! adapts its production to the planet £stability£ §YDesignation§!"
+ building_tec_cyberpsionic_transmuter_entropy:0 "The current rate of Entropy is: §R[tec_entropy_display]%§!\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!"
 
 # Webway
  building_tec_cyberpsionic_gate:0 "Phase-Gate"
  building_tec_cyberpsionic_gate_plural:0 "Phase-Gates"
  building_tec_cyberpsionic_gate_desc:0 "TO DO"
+
+ building_tec_cyberpsionic_gate_entropy:0 "The current rate of Entropy is: §R[tec_entropy_display]%§!\nBonuses provided by this £building£ §YBuilding§! scale with §R$mod_tec_entropy$§!"
 
 # ---------------------------------------------------------------
 # BRANCH OFFICES
