Fixed to mixed and fix my edict thingie

--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -2672,7 +2672,7 @@ tech_reverse_advanced_dome: " "
 # ------------------------------------------------------------ namespace = tec_biopsionic_path
 # --------------- Picked
  tec_biopsionic_path.300.name:0 "Purity of Form"
- tec_biopsionic_path.300.desc:0 "Mind, body and soul together, we are close to unlock the true potential of our species.\nBy making our way towards fully discovering our psionic potential, and our dexterity in genetic manipulation technologies, we can make our species, and our empire, better as a whole.\n\nNew discoveries and challenges awaits for [Root.GetName], but we will be are pure in all ways."
+ tec_biopsionic_path.300.desc:0 "Mind, body and soul together, we are close to unlock the true potential of our species.\nBy making our way towards fully discovering our psionic potential, and our dexterity in genetic manipulation technologies, we can make our species, and our empire, better as a whole.\n\nNew discoveries and challenges awaits for [Root.GetName], but we will be pure in all ways."
  tec_biopsionic_path.300.a:0 "We will achieve balance"
  tec_biopsionic_path.300.a.tooltip:0 "The situation §Y$situation_tec_biopsionic_path_t2$§! is available"
  tec_biopsionic_path.300.b:0 "We still have knowledge to acquire..."
