Fixed some civic locs, moved science corp effect to civic, extended the interdimensional resolution effect

--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -354,7 +354,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_quantum_alloys:0 "Quantic Forging"
  civic_tec_quantum_alloys_desc:0 "The use of quantum entanglement techniques during alloy refining processes provides superdense and efficient alloys, hyper-bonded at a sub-atomic level, by applying intense amounts of energy."
- civic_tooltip_tec_quantum_alloys_effects:0 "£job_foundry£ §Y$job_foundry_plural$§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician£ §Y$job_technician_plural$§! increase the output of Metallurgist jobs by §G1%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Foundry output boost is present.§!\n"
+ civic_tooltip_tec_quantum_alloys_effects:0 "£job_foundry£ §Y$job_foundry_plural$§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Metallurgist Output from £job_technician£ $job_technician_plural$: §G+1%§!\n\n§HThis bonus is disabled when a similar £job_foundry£ Foundry output boost is present.§!\n"
 
  civic_tec_corporate_quantum_alloys:0 "Quantic Alloy-Profiteering"
  civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
@@ -362,11 +362,11 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_hive_quantum_alloys:0 "Quantic Moulding"
  civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
- civic_tooltip_tec_hive_quantum_alloys_effects:0 "£job_alloy_drone£ §YAlloy Drones§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! increase the output of Alloy Drones by §G1%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Alloy Drone output boost is present.§!\n"
+ civic_tooltip_tec_hive_quantum_alloys_effects:0 "£job_alloy_drone£ §YAlloy Drones§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Alloy Drones Output from £job_technician_drone£ $job_technician_drone_plural$: §G+1%§!\n\n§HThis bonus is disabled when a similar £job_foundry£ Alloy Drone output boost is present.§!\n"
 
  civic_tec_machine_quantum_alloys:0 "Quantic Meta-Fabrication"
  civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
- civic_tooltip_tec_machine_quantum_alloys_effects:0 "£job_fabricator£ §YFabricators§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! increase the output of Fabricators by §G1%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Fabricator output boost is present.§!\n"
+ civic_tooltip_tec_machine_quantum_alloys_effects:0 "£job_fabricator£ §YFabricators§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_foundry£ Fabricators Output from £job_technician_drone£ $job_technician_drone_plural$: §G+1%§!\n\n§HThis bonus is disabled when a similar £job_foundry£ Fabricator output boost is present.§!\n"
 
 # /
 
@@ -569,7 +569,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_corporate_patentscorp: "Scientific Corporatism"
  civic_tec_corporate_patentscorp_desc:0 "Science is progress, and profit.\nThis megacorp has no limits, nor scruples, when it comes to buying, selling and carrying out patents, looking for the best bidder and at the same time surpassing (or supressing) all research competition."
- civic_tooltip_tec_corporate_patentscorp_effects:1 "£building£ §YCapital Buildings§! replace some £job_executive£ §Y$job_executive$§! Jobs with £job_tec_corpo_consultant£ §Y$job_tec_corpo_consultant_plural$§!.\n- $job_tec_corpo_consultant_effect_desc$\n\n£job_clerk£ §Y$job_clerk_plural$§! also produces +1 £trigger_tec_research£ Research Points, §Ynot§! increased by the respective field techs.\nAllows §Y$trade_policy_innovation$§! Trade Policy, which converts £trade_value£ §YTrade Value§! into £energy£ Energy and £trigger_tec_research£ Research Points.\n\nVarious branch office buildings are replaced by science-oriented buildings.\n\n"
+ civic_tooltip_tec_corporate_patentscorp_effects:1 "£building£ §YCapital Buildings§! replace some £job_executive£ §Y$job_executive$§! Jobs with £job_tec_corpo_consultant£ §Y$job_tec_corpo_consultant_plural$§!.\n- $job_tec_corpo_consultant_effect_desc$\n\nAllows §Y$trade_policy_innovation$§! Trade Policy, which converts £trade_value£ §YTrade Value§! into £energy£ Energy and £trigger_tec_research£ Research Points.\n\nVarious branch office buildings are replaced by science-oriented buildings.\n\n"
 
  civic_tec_corporate_exploiters: "Environmental Exploiters"
  civic_tec_corporate_exploiters_desc:0 "Every natural resource, with an adequate treatment, is a free source of profit, and the CEOs of this megacorp know this too well, focusing in geo-engineering and strip-mining technologies. So, a galaxy full of resources is a galaxy full of money."
@@ -1085,7 +1085,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_machine_performance:0 "Performance Monitors"
  civic_tec_machine_performance_desc:0 "Originally designed for improving production, this gestalt conciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
- civic_tooltip_tec_machine_performance_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_performance_drone£ §Y$job_tec_performance_drone_plural$§!.\n- $job_tec_performance_drone_effect_desc$\n\n£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
+ civic_tooltip_tec_machine_performance_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_performance_drone£ §Y$job_tec_performance_drone_plural$§!.\n- $job_tec_performance_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
 
  # Research - Hypercluster
  civic_tec_machine_hypercluster:0 "Research Hyperclusters"
@@ -1095,7 +1095,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # Maintenance - Reimaginators
  civic_tec_machine_reimaginators:0 "Self-Reimaginators"
  civic_tec_machine_reimaginators_desc:0 "Each little piece, gear and circuit is the key of the foundation of this machine conciousness, so every design must be perfect; Each assembled part, drone and ship is supervised by specifically designed drones, which not only will ensure the correct working but also will seek any feasible way to improve to the biggest degree possible, keeping the assembly lines and the planet development as streamlined and perfect as computational power can allow."
- civic_tooltip_tec_machine_reimaginators_effects:0 "£building£ §YCapital Buildings§! provide a £job_tec_reimaginator_drone£ §Y$job_tec_reimaginator_drone_plural$§!, which replace the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_reimaginator_drone_effect_desc$\n\n£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$ from £job_fabricator£ $job_fabricator_plural$: §G+1§!\n\n§HThis civic restricts the use of Assembly Buildings.§!"
+ civic_tooltip_tec_machine_reimaginators_effects:0 "£building£ §YCapital Buildings§! provide a £job_tec_reimaginator_drone£ §Y$job_tec_reimaginator_drone_plural$§!, which replace the capital and building £job_roboticist£ §YAssembly§!.\n- $job_tec_reimaginator_drone_effect_desc$\n\n$tec_loc_amenities$ from £job_fabricator£ $job_fabricator_plural$: §G+1§!\n\n§HThis civic restricts the use of Assembly Buildings.§!"
 
  # Unity - Depurator
  civic_tec_machine_debuggers:0 "Code Debuggers"
@@ -1105,7 +1105,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  # Armies - Megaform
  civic_tec_machine_warform:0 "Imposing Megaforms"
  civic_tec_machine_warform_desc:0 "The need of security, defense and a proper outpost development required the invention of more solid lines of defense, in this case a new kind of drone capable of not only maintaining structures and making specific tasks, but also having the firepower and defensive capacities that would ensure the safety of lesser drone units."
- civic_tooltip_tec_machine_megaform_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_warform_drone£ §Y$job_tec_warform_drone_plural$§!.\n- $job_tec_warform_drone_effect_desc$\n\n£mod_country_naval_cap_add£ Naval Capacity from £job_warrior_drone£ $£job_warrior_drone_plural$: §G+1§!"
+ civic_tooltip_tec_machine_megaform_effects:0 "£building£ §YCapital Buildings§! replace some £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_tec_warform_drone£ §Y$job_tec_warform_drone_plural$§!.\n- $job_tec_warform_drone_effect_desc$\n\n£mod_country_naval_cap_add£ Naval Capacity from £job_warrior_drone£ $job_warrior_drone_plural$: §G+1§!"
 
 # Machine Mechanic Civics
 # ------------------------------------------------------------
@@ -1137,7 +1137,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 # ------------------------------------------------------------
  civic_tec_machine_menial:0 "Conductive Relays"
  civic_tec_machine_menial_desc:0 "The excess of energy requirements for any machine is a evidence that must be effectively and practically solved; by recycling extra heat and kinetic energy from storages and factories to other processes via peer-to-per drone relay transmision, energy demands can be exponentially reduced and dispersion mitigated, while improving performance."
- civic_tooltip_tec_machine_menial_effects:0 "£district£ §Y$district_nexus$§! districts provide §G1§! extra £job_technician_drone£ §Y$job_technician_drone$§! job.\n£amenities£ Amenities from £job_technician£ $job_technician_drone_plural$: §G+1§!\n"
+ civic_tooltip_tec_machine_menial_effects:0 "£district£ §Y$district_nexus$§! districts provide §G1§! extra £job_technician_drone£ §Y$job_technician_drone$§! job.\n$tec_loc_amenities$ from £job_technician£ $job_technician_drone_plural$: §G+1§!\n"
 
 
 # Machine Ruler Civics
@@ -1207,7 +1207,7 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
  civic_tec_machine_node:0 "Amplifying Relays"
  civic_tec_machine_node_desc:0 "The degree of signal amplification of this Machine Empire is unparalleled, as each drone serves as a mini amplifier of the central nexus signal, scaling up in the quality of each drone estament, and serving as mutual improvement or general processing co-working."
 
- civic_tooltip_tec_machine_node_effects:0 "Each £job_coordinator£ §Y$job_coordinator$§! boost Menial Drones §YOutput§! by §Y1%§!.\n\n"
+ civic_tooltip_tec_machine_node_effects:0 "$pop_cat_simple_drone$ Pop £job£ Jobs Output from £job_coordinator£ $job_coordinator_plural$: §G+1%§!"
 
 # Removed/Not coded
  civic_tec_machine_fleetrelays:0 "Fleet Relays"
