Changed NDO to OEXP for compat origins

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -311,15 +311,15 @@
  origin_pd_scrapyard_world: "[PD Uniques] Another Xeno's Trash"
  origin_pd_hycean_aquatic: "[PD Exotics] Hycean Deep Dwellers"
 
- # NDO
- origin_psionic_abilities: "[NDO] Psionic Abilities"
- origin_resort_world: "[NDO] Resort World"
- origin_disharmonious_unity: "[NDO] Disharmonious Unity"
- origin_technological_unity: "[NDO] Technological Unity"
- origin_megacorp_unification: "[NDO] Megacorp Unification"
- origin_one_religion: "[NDO] One Religion"
- origin_way_to_peacefulness: "[NDO] Way of Peacefulness"
- origin_unification_wars: "[NDO] Unification Wars"
+ # Origins Expanded
+ origin_psionic_abilities: "[OEXP] Psionic Abilities"
+ origin_resort_world: "[OEXP] Resort World"
+ origin_disharmonious_unity: "[OEXP] Disharmonious Unity"
+ origin_technological_unity: "[OEXP] Technological Unity"
+ origin_megacorp_unification: "[OEXP] Megacorp Unification"
+ origin_one_religion: "[OEXP] One Religion"
+ origin_way_to_peacefulness: "[OEXP] Way of Peacefulness"
+ origin_unification_wars: "[OEXP] Unification Wars"
 
  # Origins Extended
  originsextended_psi: "[OEXT] Shroud Touched"
